<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thedeveloperworldisyous.encryptionfile.RSAActivity"
    tools:showIn="@layout/activity_rsa">

    <EditText
        android:id="@+id/activity_rsa_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/activity_rsa_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_rsa_edit_text"
        android:layout_centerHorizontal="true"
        android:onClick="encodeAndDecodeRSA"
        android:text="@string/symmetric_algorithm_aes_encryption_button" />

    <TextView
        android:id="@+id/activity_rsa_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_rsa_button"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/asymmetric_algorithm_rsa_title"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/activity_rsa_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_rsa_text_view_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/activity_rsa_encode_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_rsa_text_view"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/asymmetric_algorithm_rsa_enryption_title"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/activity_rsa_encode_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_rsa_encode_text_view_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/activity_rsa_decode_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_rsa_encode_text_view"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/asymmetric_algorithm_rsa_deryption_title"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/activity_rsa_decode_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_rsa_decode_text_view_title"/>
</RelativeLayout>
